--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section>
             <img src="assets/gifHobbit.gif" alt="El bueno de Bilbo">
             <p>Pulsa para acceder</p>
-            <button><a href="quiz.html">Acceso</a></button>
+            <button id="botonEnviar"><a href="quiz.html">Acceso</a></button>
         </section>
     </main>
     <script src="script.js"></script>
