add/More_little_changes

--- a/quiz.html
+++ b/quiz.html
@@ -13,75 +13,100 @@
     <form action="#" name="ptcg">
         <fieldset>
             <legend>¿Quién fue el primer rey "bajo La Montaña"?</legend>
-            <label for="erebor1">Erebor</label>
-            <input id="erebor1" type="radio" name="primerRey" value="erebor">
 
-            <label for="erebor2">Thorin I</label>
-            <input id="erebor2" type="radio" name="primerRey" value="thorin">
+            <div id="div1">
+                <label for="erebor1">Erebor</label>
+                <input id="erebor1" type="radio" name="primerRey" value="erebor">
 
-            <label for="erebor3">Thráin I</label>
-            <input id="erebor3" type="radio" name="primerRey" value="thrain">
+                <label for="erebor2">Thorin I</label>
+                <input id="erebor2" type="radio" name="primerRey" value="thorin">
+            </div>
 
-            <label for="erebor4">Thrór</label>
-            <input id="erebor4" type="radio" name="primerRey" value="thror">
+            <div id="div2">
+                <label for="erebor3">Thráin I</label>
+                <input id="erebor3" type="radio" name="primerRey" value="thrain">
+
+                <label for="erebor4">Thrór</label>
+                <input id="erebor4" type="radio" name="primerRey" value="thror">
+            </div>
         </fieldset>
         <fieldset>
             <legend>¿Cuántos enanos acompañan a Bilbo en el comienzo del viaje?</legend>
-            <label for="enanos1">8</label>
-            <input id="enanos1" type="radio" name="numeroEnanos" value="8">
 
-            <label for="enanos2">9</label>
-            <input id="enanos2" type="radio" name="numeroEnanos" value="9">
+            <div id="div1">
+                <label for="enanos1">8</label>
+                <input id="enanos1" type="radio" name="numeroEnanos" value="8">
 
-            <label for="enanos3">11</label>
-            <input id="enanos3" type="radio" name="numeroEnanos" value="11">
+                <label for="enanos2">9</label>
+                <input id="enanos2" type="radio" name="numeroEnanos" value="9">
+            </div>
 
-            <label for="enanos4">13</label>
-            <input id="enanos4" type="radio" name="numeroEnanos" value="13">
+            <div id="div2">
+                <label for="enanos3">11</label>
+                <input id="enanos3" type="radio" name="numeroEnanos" value="11">
+
+                <label for="enanos4">13</label>
+                <input id="enanos4" type="radio" name="numeroEnanos" value="13">
+            </div>
         </fieldset>
         <fieldset>
             <legend>¿Por qué motivo ayuda Gandalf a Thorin "Escudo de Roble" en su empresa de recuperar su hogar en
                 Erebor?</legend>
-            <label for="motivo1">Para derrotar a Smaug e impedir que se una a las filas de Sauron</label>
-            <input id="motivo1" type="radio" name="motivoAyuda" value="derrotarSmaug">
 
-            <label for="motivo2">Para encontrar el Anillo Único y poder destruirlo</label>
-            <input id="motivo2" type="radio" name="motivoAyuda" value="encontrarAnillo">
+            <div id="div1">
+                <label for="motivo1">Para derrotar a Smaug e impedir que se una a las filas de Sauron</label>
+                <input id="motivo1" type="radio" name="motivoAyuda" value="derrotarSmaug">
 
-            <label for="motivo3">Para quedarse con la espada Glamdring de entre los tesoros de Erebor</label>
-            <input id="motivo3" type="radio" name="motivoAyuda" value="espadaGlamdring">
+                <label for="motivo2">Para encontrar el Anillo Único y poder destruirlo</label>
+                <input id="motivo2" type="radio" name="motivoAyuda" value="encontrarAnillo">
+            </div>
 
-            <label for="motivo4">Para contar con su ayuda en la futura batalla de "Los Cinco Ejércitos"</label>
-            <input id="motivo4" type="radio" name="motivoAyuda" value="ayudaBatalla">
+            <div id="div2">
+                <label for="motivo3">Para quedarse con la espada Glamdring de entre los tesoros de Erebor</label>
+                <input id="motivo3" type="radio" name="motivoAyuda" value="espadaGlamdring">
+
+                <label for="motivo4">Para contar con su ayuda en la futura batalla de "Los Cinco Ejércitos"</label>
+                <input id="motivo4" type="radio" name="motivoAyuda" value="ayudaBatalla">
+            </div>
         </fieldset>
         <fieldset>
             <legend>¿En la gran batalla de "Los Cinco Ejércitos", qué ejército no formó parte de ella?</legend>
-            <label for="ejercito1">Los Enanos de las Colinas de Hierro</label>
-            <input id="ejercito1" type="radio" name="ejercitosParticipantes" value="enanosColinas">
 
-            <label for="ejercito2">Los Elfos de Thranduil</label>
-            <input id="ejercito2" type="radio" name="ejercitosParticipantes" value="elfosThranduil">
+            <div id="div1">
+                <label for="ejercito1">Los Enanos de las Colinas de Hierro</label>
+                <input id="ejercito1" type="radio" name="ejercitosParticipantes" value="enanosColinas">
 
-            <label for="ejercito3">Las Grandes Águilas de las Montañas Nubladas</label>
-            <input id="ejercito3" type="radio" name="ejercitosParticipantes" value="grandesAguilas">
+                <label for="ejercito2">Los Elfos de Thranduil</label>
+                <input id="ejercito2" type="radio" name="ejercitosParticipantes" value="elfosThranduil">
+            </div>
 
-            <label for="ejercito4">Los "Cambiapieles" de la Carroca</label>
-            <input id="ejercito4" type="radio" name="ejercitosParticipantes" value="cambiapielesCarroca">
+            <div id="div2">
+                <label for="ejercito3">Las Grandes Águilas de las Montañas Nubladas</label>
+                <input id="ejercito3" type="radio" name="ejercitosParticipantes" value="grandesAguilas">
+
+                <label for="ejercito4">Los "Cambiapieles" de la Carroca</label>
+                <input id="ejercito4" type="radio" name="ejercitosParticipantes" value="cambiapielesCarroca">
+            </div>
         </fieldset>
         <fieldset>
             <legend>¿Cuál es el nombre del bosque más grande por el que pasan Bilbo y la compañía de Thorin "Escudo
                 de Roble" en su camino a Erebor?</legend>
-            <label for="bosque1">El Bosque Verde</label>
+
+            <div id="div1">
+                <label for="bosque1">El Bosque Verde</label>
             <input id="bosque1" type="radio" name="nombreBosque" value="bosqueVerde">
 
             <label for="bosque2">El Bosque de Lórien</label>
             <input id="bosque2" type="radio" name="nombreBosque" value="bosqueLorien">
+            </div>
 
-            <label for="bosque3">El Bosque Negro</label>
+            <div id="div2">
+                <label for="bosque3">El Bosque Negro</label>
             <input id="bosque3" type="radio" name="nombreBosque" value="bosqueNegro">
 
             <label for="bosque4">El Bosque de Fangorn</label>
             <input id="bosque4" type="radio" name="nombreBosque" value="bosqueFangorn">
+            </div>
         </fieldset>
 
         <button type="submit">Resultados</button>
