--- a/quiz.html
+++ b/quiz.html
@@ -11,105 +11,112 @@
 
 <body>
     <form action="#" name="ptcg">
-        <fieldset>
+        <fieldset id="ereborFieldset">
             <legend>¿Quién fue el primer rey "bajo La Montaña"?</legend>
 
-            <div id="div1">
-                <label for="erebor1">Erebor</label>
+            <div class="div1">
+                <label for="erebor1" class="ereborLabel" onclick="selectLabel(this)">Erebor</label>
                 <input id="erebor1" type="radio" name="primerRey" value="erebor">
 
-                <label for="erebor2">Thorin I</label>
+                <label for="erebor2" class="ereborLabel" onclick="selectLabel(this)">Thorin I</label>
                 <input id="erebor2" type="radio" name="primerRey" value="thorin">
             </div>
 
-            <div id="div2">
-                <label for="erebor3">Thráin I</label>
+            <div class="div2">
+                <label for="erebor3" class="ereborLabel" onclick="selectLabel(this)">Thráin I</label>
                 <input id="erebor3" type="radio" name="primerRey" value="thrain">
 
-                <label for="erebor4">Thrór</label>
+                <label for="erebor4" class="ereborLabel" onclick="selectLabel(this)">Thrór</label>
                 <input id="erebor4" type="radio" name="primerRey" value="thror">
             </div>
         </fieldset>
-        <fieldset>
+        <fieldset id="enanosFieldset">
             <legend>¿Cuántos enanos acompañan a Bilbo en el comienzo del viaje?</legend>
 
-            <div id="div1">
-                <label for="enanos1">8</label>
+            <div class="div1">
+                <label for="enanos1" class="enanosLabel" onclick="selectLabel(this)">8</label>
                 <input id="enanos1" type="radio" name="numeroEnanos" value="8">
 
-                <label for="enanos2">9</label>
+                <label for="enanos2" class="enanosLabel" onclick="selectLabel(this)">9</label>
                 <input id="enanos2" type="radio" name="numeroEnanos" value="9">
             </div>
 
-            <div id="div2">
-                <label for="enanos3">11</label>
+            <div class="div2">
+                <label for="enanos3" class="enanosLabel" onclick="selectLabel(this)">11</label>
                 <input id="enanos3" type="radio" name="numeroEnanos" value="11">
 
-                <label for="enanos4">13</label>
+                <label for="enanos4" class="enanosLabel" onclick="selectLabel(this)">13</label>
                 <input id="enanos4" type="radio" name="numeroEnanos" value="13">
             </div>
         </fieldset>
-        <fieldset>
+        <fieldset id="motivosFieldset">
             <legend>¿Por qué motivo ayuda Gandalf a Thorin "Escudo de Roble" en su empresa de recuperar su hogar en
                 Erebor?</legend>
 
-            <div id="div1">
-                <label for="motivo1">Para derrotar a Smaug e impedir que se una a las filas de Sauron</label>
+            <div class="div1">
+                <label for="motivo1" class="motivosLabel" onclick="selectLabel(this)">Para derrotar a Smaug e impedir
+                    que se una a las filas de Sauron</label>
                 <input id="motivo1" type="radio" name="motivoAyuda" value="derrotarSmaug">
 
-                <label for="motivo2">Para encontrar el Anillo Único y poder destruirlo</label>
+                <label for="motivo2" class="motivosLabel" onclick="selectLabel(this)">Para encontrar el Anillo Único y
+                    poder destruirlo</label>
                 <input id="motivo2" type="radio" name="motivoAyuda" value="encontrarAnillo">
             </div>
 
-            <div id="div2">
-                <label for="motivo3">Para quedarse con la espada Glamdring de entre los tesoros de Erebor</label>
+            <div class="div2">
+                <label for="motivo3" class="motivosLabel" onclick="selectLabel(this)">Para quedarse con la espada
+                    Glamdring de entre los tesoros de Erebor</label>
                 <input id="motivo3" type="radio" name="motivoAyuda" value="espadaGlamdring">
 
-                <label for="motivo4">Para contar con su ayuda en la futura batalla de "Los Cinco Ejércitos"</label>
+                <label for="motivo4" class="motivosLabel" onclick="selectLabel(this)">Para contar con su ayuda en la
+                    futura batalla de "Los Cinco Ejércitos"</label>
                 <input id="motivo4" type="radio" name="motivoAyuda" value="ayudaBatalla">
             </div>
         </fieldset>
-        <fieldset>
+        <fieldset id="ejercitosFieldset">
             <legend>¿En la gran batalla de "Los Cinco Ejércitos", qué ejército no formó parte de ella?</legend>
 
-            <div id="div1">
-                <label for="ejercito1">Los Enanos de las Colinas de Hierro</label>
+            <div class="div1">
+                <label for="ejercito1" class="ejercitosLabel" onclick="selectLabel(this)">Los Enanos de las Colinas de
+                    Hierro</label>
                 <input id="ejercito1" type="radio" name="ejercitosParticipantes" value="enanosColinas">
 
-                <label for="ejercito2">Los Elfos de Thranduil</label>
+                <label for="ejercito2" class="ejercitosLabel" onclick="selectLabel(this)">Los Elfos de Thranduil</label>
                 <input id="ejercito2" type="radio" name="ejercitosParticipantes" value="elfosThranduil">
             </div>
 
-            <div id="div2">
-                <label for="ejercito3">Las Grandes Águilas de las Montañas Nubladas</label>
+            <div class="div2">
+                <label for="ejercito3" class="ejercitosLabel" onclick="selectLabel(this)">Las Grandes Águilas de las
+                    Montañas Nubladas</label>
                 <input id="ejercito3" type="radio" name="ejercitosParticipantes" value="grandesAguilas">
 
-                <label for="ejercito4">Los "Cambiapieles" de la Carroca</label>
+                <label for="ejercito4" class="ejercitosLabel" onclick="selectLabel(this)">Los "Cambiapieles" de la
+                    Carroca</label>
                 <input id="ejercito4" type="radio" name="ejercitosParticipantes" value="cambiapielesCarroca">
             </div>
         </fieldset>
-        <fieldset>
+        <fieldset id="bosqueFieldset">
             <legend>¿Cuál es el nombre del bosque más grande por el que pasan Bilbo y la compañía de Thorin "Escudo
                 de Roble" en su camino a Erebor?</legend>
 
-            <div id="div1">
-                <label for="bosque1">El Bosque Verde</label>
-            <input id="bosque1" type="radio" name="nombreBosque" value="bosqueVerde">
+            <div class="div1">
+                <label for="bosque1" class="bosqueLabel" onclick="selectLabel(this)">El Bosque Verde</label>
+                <input id="bosque1" type="radio" name="nombreBosque" value="bosqueVerde">
 
-            <label for="bosque2">El Bosque de Lórien</label>
-            <input id="bosque2" type="radio" name="nombreBosque" value="bosqueLorien">
+                <label for="bosque2" class="bosqueLabel" onclick="selectLabel(this)">El Bosque de Lórien</label>
+                <input id="bosque2" type="radio" name="nombreBosque" value="bosqueLorien">
             </div>
 
-            <div id="div2">
-                <label for="bosque3">El Bosque Negro</label>
-            <input id="bosque3" type="radio" name="nombreBosque" value="bosqueNegro">
+            <div class="div2">
+                <label for="bosque3" class="bosqueLabel" onclick="selectLabel(this)">El Bosque Negro</label>
+                <input id="bosque3" type="radio" name="nombreBosque" value="bosqueNegro">
 
-            <label for="bosque4">El Bosque de Fangorn</label>
-            <input id="bosque4" type="radio" name="nombreBosque" value="bosqueFangorn">
+                <label for="bosque4" class="bosqueLabel" onclick="selectLabel(this)">El Bosque de Fangorn</label>
+                <input id="bosque4" type="radio" name="nombreBosque" value="bosqueFangorn">
             </div>
         </fieldset>
 
-        <button type="submit">Resultados</button>
+        <button type="submit" id="botonEnviar">Resultados</button>
     </form>
 
     <script src="script.js"></script>
