add/tablet_and_pc_media_queries

--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form action="#" name="ptcg">
+    <form action="#" name="theHobbit">
         <fieldset id="ereborFieldset">
             <legend>¿Quién fue el primer rey "bajo La Montaña"?</legend>
 
@@ -50,8 +50,7 @@
             </div>
         </fieldset>
         <fieldset id="motivosFieldset">
-            <legend>¿Por qué motivo ayuda Gandalf a Thorin "Escudo de Roble" en su empresa de recuperar su hogar en
-                Erebor?</legend>
+            <legend>¿Por qué motivo ayuda Gandalf a Thorin "Escudo de Roble" en su empresa de recuperar su hogar en Erebor?</legend>
 
             <div class="div1">
                 <label for="motivo1" class="motivosLabel" onclick="selectLabel(this)">Para derrotar a Smaug e impedir
